--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h1> feihie </h1>
-    <a href="https://iplogger.org/logger/EkNg5Qw3QuF0">
+    <a href="https://iplogger.com/2Hv7B4">
     <img src="https://tse4.mm.bing.net/th/id/OIP.a6JcZvAG77axQYCv-pDadgHaHa?r=0&rs=1&pid=ImgDetMain&o=7&rm=3"width=160 height=220  >
     </a>
     
