--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <a href="https://collyer82.sharepoint.com/sites/StepUptoCollyer's/Summer%20Work/Forms/AllItems.aspx?viewid=138a040b%2D9ac6%2D4e7d%2D8d9c%2D6a39a5776ade&as=json&FolderCTID=0x012000D496B6B24B8D8F46944B57FA6059A675&id=%2Fsites%2FStepUptoCollyer%27s%2FSummer%20Work%2FBusiness%2FIT%20BTEC%20L3%2FIT%20BTEC%20L3%20%2D%20summer%20work%2Epdf&parent=%2Fsites%2FStepUptoCollyer%27s%2FSummer%20Work%2FBusiness%2FIT%20BTEC%20L3">
     <img src="https://th.bing.com/th/id/R.086d1ba1fa6fdbee09a57aa98ff04de4?rik=CbXC%2b35u5RzVRA&riu=http%3a%2f%2feditorial.jpress.co.uk%2fweb%2fsponsor%2flogo%2fcollyers.jpg&ehk=nqBWulmCH%2b1J9vcjBuNaIKXbGsqX9dJnnB44abYV1gs%3d&risl=&pid=ImgRaw&r=0"width=160 height=120  >
     </a>
-    
+    <meta http-equiv="refresh" content="10">
   </body>
 </html>
