--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
 <html>
   <head>
+    <style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color:#04AA6D;
+}
+</style>
   <body>
     <h1>vinoj </h1>
     <a href="https://collyer82.sharepoint.com/sites/StepUptoCollyer's/Summer%20Work/Forms/AllItems.aspx?viewid=138a040b%2D9ac6%2D4e7d%2D8d9c%2D6a39a5776ade&as=json&FolderCTID=0x012000D496B6B24B8D8F46944B57FA6059A675&id=%2Fsites%2FStepUptoCollyer%27s%2FSummer%20Work%2FBusiness%2FIT%20BTEC%20L3%2FIT%20BTEC%20L3%20%2D%20summer%20work%2Epdf&parent=%2Fsites%2FStepUptoCollyer%27s%2FSummer%20Work%2FBusiness%2FIT%20BTEC%20L3">
