--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ a:hover:not(.active) {
     <img src="https://th.bing.com/th/id/R.086d1ba1fa6fdbee09a57aa98ff04de4?rik=CbXC%2b35u5RzVRA&riu=http%3a%2f%2feditorial.jpress.co.uk%2fweb%2fsponsor%2flogo%2fcollyers.jpg&ehk=nqBWulmCH%2b1J9vcjBuNaIKXbGsqX9dJnnB44abYV1gs%3d&risl=&pid=ImgRaw&r=0"width=160 height=120  >
     </a>
     <ul>
-  <li><a class="active" href="#home">Home https://th.bing.com/th/id/R.086d1ba1fa6fdbee09a57aa98ff04de4?rik=CbXC%2b35u5RzVRA&riu=http%3a%2f%2feditorial.jpress.co.uk%2fweb%2fsponsor%2flogo%2fcollyers.jpg&ehk=nqBWulmCH%2b1J9vcjBuNaIKXbGsqX9dJnnB44abYV1gs%3d&risl=&pid=ImgRaw&r=0</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href= "https://th.bing.com/th/id/R.086d1ba1fa6fdbee09a57aa98ff04de4?rik=CbXC%2b35u5RzVRA&riu=http%3a%2f%2feditorial.jpress.co.uk%2fweb%2fsponsor%2flogo%2fcollyers.jpg&ehk=nqBWulmCH%2b1J9vcjBuNaIKXbGsqX9dJnnB44abYV1gs%3d&risl=&pid=ImgRaw&r=0""#news">News</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
