--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
  
     <style>
             #nav {
-text-align:center;
-}
+text-align:center;}
 #nav li {
-display:inline;
-}
+display:inline;}
 #nav a {
 text-decoration:none; 
 padding:0 10px; /* variable width */ }
