--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <html>
   <head>
  
-    <style>
-            #nav {
-text-align:center;}
+    <style>div {
+position:relative;
+}
+#nav {
+position:absolute;
+left:50%;top:0;
+margin-left:-375px; /* negative margin equal to half the width */
+width:750px;
+list-style:none;
+}
 #nav li {
-display:inline;}
+float:left;
+}
 #nav a {
+display:block;
+text-align:center;
+width:150px; /* fixed width */
 text-decoration:none; 
-padding:0 10px; /* variable width */ }
+}
 ul {
   list-style-type: none;
   margin: 0;
