--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a:hover:not(.active) {
     <ul id="nav">
   <li><a class="active" href="#home">Home</a></li>
   <li><a href= "https://th.bing.com/th/id/R.086d1ba1fa6fdbee09a57aa98ff04de4?rik=CbXC%2b35u5RzVRA&riu=http%3a%2f%2feditorial.jpress.co.uk%2fweb%2fsponsor%2flogo%2fcollyers.jpg&ehk=nqBWulmCH%2b1J9vcjBuNaIKXbGsqX9dJnnB44abYV1gs%3d&risl=&pid=ImgRaw&r=0""#news">News</a></li>
-  <li><a href= "https://www.youtube.com/""#contact">Contact</a></li>
+  <li><a href= "https://iplogger.com/23EX06""#contact">Contact</a></li>
   <li><a href= "https://github.com/amethesh263/amethesh2/settings/pages""#about">About</a></li>
 </ul>
   </head>
