--- a/index.html
+++ b/index.html
@@ -3,154 +3,424 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Parent–Child Account System</title>
+  <title>Ishaan's Clothing Store</title>
   <style>
+    /* ====== GENERAL STYLES ====== */
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      padding: 20px;
+      background-color: #f4f4f4;
+      color: #333;
     }
-    .container {
+
+    header {
+      background-color: #111;
+      color: #fff;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    /* ====== ANIMATED LOGO ====== */
+    .logo {
+      font-size: 1.8em;
+      font-weight: bold;
+      letter-spacing: 2px;
+      animation: glow 2s infinite alternate;
+    }
+
+    @keyframes glow {
+      from { color: #00bcd4; text-shadow: 0 0 5px #00bcd4; }
+      to { color: #ff4081; text-shadow: 0 0 15px #ff4081; }
+    }
+
+    /* ====== NAVIGATION ====== */
+    nav {
+      display: flex;
+      align-items: center;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    nav a:hover {
+      color: #ff4081;
+    }
+
+    /* ====== HAMBURGER MENU ====== */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background: white;
+      margin: 4px 0;
+    }
+
+    @media(max-width: 768px) {
+      nav ul {
+        display: none;
+        flex-direction: column;
+        background: #222;
+        position: absolute;
+        top: 60px;
+        right: 20px;
+        padding: 15px;
+        border-radius: 5px;
+      }
+
+      nav ul.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+    }
+
+    /* ====== SECTIONS ====== */
+    section {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .section-title {
+      font-size: 2em;
+      color: #111;
+      margin-bottom: 20px;
+    }
+
+    .products {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .product {
+      background: white;
+      border-radius: 8px;
+      width: 200px;
+      padding: 15px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+    }
+
+    .product img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+    .product button {
+      background-color: #00bcd4;
+      border: none;
+      padding: 10px;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    .product button:hover {
+      background-color: #0097a7;
+    }
+
+    /* ====== SHOPPING CART ====== */
+    #cart {
       background: #fff;
       padding: 20px;
       max-width: 400px;
-      margin: 20px auto;
+      margin: 0 auto;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    input, select, button {
+
+    #cart ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    #cart li {
+      margin: 10px 0;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 5px;
+    }
+
+    /* ====== CONTACT FORM ====== */
+    form {
+      background: white;
+      padding: 20px;
+      max-width: 400px;
+      margin: 0 auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    input, textarea {
       width: 100%;
       padding: 10px;
       margin: 8px 0;
       border-radius: 5px;
       border: 1px solid #ccc;
     }
-    button {
-      background-color: #007bff;
+
+    button.submit {
+      background-color: #ff4081;
       color: white;
       border: none;
+      padding: 10px;
+      border-radius: 5px;
+      width: 100%;
+      cursor: pointer;
     }
-    button:hover {
-      background-color: #0056b3;
+
+    /* ====== LOGIN / SIGNUP ====== */
+    #accounts {
+      max-width: 400px;
+      margin: 0 auto;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h2 { text-align: center; }
-    .section { margin-top: 30px; }
+
+    footer {
+      background-color: #111;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h2>Sign Up</h2>
+  <header>
+    <div class="logo">Ishaan's Styles</div>
+    <nav>
+      <ul id="navLinks">
+        <li><a href="#men">Men</a></li>
+        <li><a href="#women">Women</a></li>
+        <li><a href="#children">Children</a></li>
+        <li><a href="#cart">Cart</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#accounts">Login</a></li>
+      </ul>
+    </nav>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div><div></div><div></div>
+    </div>
+  </header>
+
+  <section id="intro">
+    <h2 class="section-title">Welcome to Ishaan's Clothing Store</h2>
+    <p>We offer affordable and stylish clothing for men, women, and children.  
+      You can create accounts as parents or juniors, link them together, and shop smarter — juniors can send their picks directly to their parents!</p>
+  </section>
+
+  <!-- MEN SECTION -->
+  <section id="men">
+    <h2 class="section-title">Men's Section</h2>
+    <div class="products">
+      <div class="product">
+        <img src="https://via.placeholder.com/200x200?text=Men+Jacket" alt="Men Jacket">
+        <p>Men's Jacket - $30</p>
+        <button onclick="addToCart('Men Jacket')">Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/200x200?text=Men+Shirt" alt="Men Shirt">
+        <p>Men's Shirt - $15</p>
+        <button onclick="addToCart('Men Shirt')">Add to Cart</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- WOMEN SECTION -->
+  <section id="women">
+    <h2 class="section-title">Women's Section</h2>
+    <div class="products">
+      <div class="product">
+        <img src="https://via.placeholder.com/200x200?text=Women+Dress" alt="Women Dress">
+        <p>Women's Dress - $25</p>
+        <button onclick="addToCart('Women Dress')">Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/200x200?text=Women+Top" alt="Women Top">
+        <p>Women's Top - $12</p>
+        <button onclick="addToCart('Women Top')">Add to Cart</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- CHILDREN SECTION -->
+  <section id="children">
+    <h2 class="section-title">Children's Section</h2>
+    <div class="products">
+      <div class="product">
+        <img src="https://via.placeholder.com/200x200?text=Kids+Hoodie" alt="Kids Hoodie">
+        <p>Kids' Hoodie - $18</p>
+        <button onclick="addToCart('Kids Hoodie')">Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="https://via.placeholder.com/200x200?text=Kids+Tshirt" alt="Kids Tshirt">
+        <p>Kids' T-Shirt - $10</p>
+        <button onclick="addToCart('Kids T-Shirt')">Add to Cart</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- CART -->
+  <section id="cart">
+    <h2 class="section-title">Shopping Cart</h2>
+    <ul id="cartItems"></ul>
+    <p><strong>Total:</strong> $<span id="cartTotal">0</span></p>
+  </section>
+
+  <!-- CONTACT / REQUEST FORM -->
+  <section id="contact">
+    <h2 class="section-title">Request More Information</h2>
+    <form onsubmit="submitForm(event)">
+      <input type="text" id="name" placeholder="Your Name" required />
+      <input type="email" id="email" placeholder="Your Email" required />
+      <textarea id="message" placeholder="What would you like to know?" required></textarea>
+      <button class="submit" type="submit">Send Request</button>
+    </form>
+  </section>
+
+  <!-- ACCOUNT SYSTEM -->
+  <section id="accounts">
+    <h2 class="section-title">Login / Sign Up</h2>
     <select id="role">
       <option value="parent">Parent</option>
-      <option value="child">Child</option>
+      <option value="junior">Junior</option>
     </select>
-    <input type="text" id="signupUsername" placeholder="Username" />
-    <input type="password" id="signupPassword" placeholder="Password" />
+    <input type="text" id="username" placeholder="Username" />
+    <input type="password" id="password" placeholder="Password" />
     <button onclick="signUp()">Sign Up</button>
-  </div>
-
-  <div class="container">
-    <h2>Login</h2>
-    <input type="text" id="loginUsername" placeholder="Username" />
-    <input type="password" id="loginPassword" placeholder="Password" />
     <button onclick="login()">Login</button>
-  </div>
 
-  <div class="container section" id="linkSection" style="display: none;">
-    <h2>Link Child Account</h2>
-    <p>Logged in as: <b id="currentParent"></b></p>
-    <input type="text" id="childToLink" placeholder="Child's username" />
-    <button onclick="linkChild()">Link Child</button>
+    <div id="linkChildSection" style="display:none;">
+      <h3>Link Junior Account</h3>
+      <input type="text" id="childName" placeholder="Junior Username" />
+      <button onclick="linkChild()">Link</button>
+      <ul id="linkedChildren"></ul>
+    </div>
+  </section>
 
-    <h3>Linked Children:</h3>
-    <ul id="linkedChildren"></ul>
-  </div>
+  <footer>
+    <p>© 2025 Ishaan's Clothing Store | Designed by [You]</p>
+  </footer>
 
   <script>
-    // Mock database
-    const users = [];
+    // ====== HAMBURGER MENU ======
+    function toggleMenu() {
+      document.getElementById("navLinks").classList.toggle("active");
+    }
 
+    // ====== SHOPPING CART ======
+    const cart = [];
+    function addToCart(item) {
+      cart.push(item);
+      renderCart();
+    }
+
+    function renderCart() {
+      const list = document.getElementById('cartItems');
+      list.innerHTML = '';
+      let total = 0;
+
+      cart.forEach(item => {
+        const li = document.createElement('li');
+        li.textContent = item;
+        list.appendChild(li);
+        total += 10; // mock price
+      });
+
+      document.getElementById('cartTotal').innerText = total;
+    }
+
+    // ====== CONTACT FORM ======
+    function submitForm(e) {
+      e.preventDefault();
+      alert("Your request has been sent! We'll contact you soon.");
+      e.target.reset();
+    }
+
+    // ====== ACCOUNT SYSTEM ======
+    const users = [];
     let currentUser = null;
 
     function signUp() {
-      const username = document.getElementById('signupUsername').value.trim();
-      const password = document.getElementById('signupPassword').value.trim();
       const role = document.getElementById('role').value;
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
 
-      if (!username || !password) {
-        alert('Please fill in all fields.');
-        return;
-      }
+      if (!username || !password) return alert("Please fill in all fields.");
 
-      if (users.some(u => u.username === username)) {
-        alert('Username already exists!');
-        return;
-      }
+      if (users.find(u => u.username === username)) return alert("Username already exists.");
 
-      const newUser = { username, password, role, children: [] };
-      users.push(newUser);
-      alert(`Account created successfully as a ${role}!`);
-      console.log(users);
+      users.push({ username, password, role, children: [] });
+      alert(`${role} account created successfully!`);
     }
 
     function login() {
-      const username = document.getElementById('loginUsername').value.trim();
-      const password = document.getElementById('loginPassword').value.trim();
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
 
       const user = users.find(u => u.username === username && u.password === password);
-
-      if (!user) {
-        alert('Invalid username or password.');
-        return;
-      }
+      if (!user) return alert("Invalid credentials.");
 
       currentUser = user;
       alert(`Logged in as ${user.username} (${user.role})`);
 
-      if (user.role === 'parent') {
-        document.getElementById('linkSection').style.display = 'block';
-        document.getElementById('currentParent').innerText = user.username;
-        renderLinkedChildren();
+      if (user.role === "parent") {
+        document.getElementById('linkChildSection').style.display = 'block';
       } else {
-        document.getElementById('linkSection').style.display = 'none';
+        document.getElementById('linkChildSection').style.display = 'none';
       }
     }
 
     function linkChild() {
-      const childUsername = document.getElementById('childToLink').value.trim();
-      if (!childUsername) {
-        alert('Please enter a child username.');
-        return;
-      }
+      const childName = document.getElementById('childName').value;
+      const child = users.find(u => u.username === childName && u.role === 'junior');
 
-      const child = users.find(u => u.username === childUsername && u.role === 'child');
-      if (!child) {
-        alert('Child account not found.');
-        return;
-      }
+      if (!child) return alert("Junior account not found.");
 
-      if (currentUser.children.includes(childUsername)) {
-        alert('This child is already linked.');
-        return;
-      }
+      if (currentUser.children.includes(childName)) return alert("Already linked.");
 
-      currentUser.children.push(childUsername);
-      alert(`Child ${childUsername} linked successfully!`);
+      currentUser.children.push(childName);
+      alert(`Linked with junior account: ${childName}`);
       renderLinkedChildren();
     }
 
     function renderLinkedChildren() {
       const list = document.getElementById('linkedChildren');
       list.innerHTML = '';
-      currentUser.children.forEach(child => {
+      currentUser.children.forEach(c => {
         const li = document.createElement('li');
-        li.textContent = child;
+        li.textContent = c;
         list.appendChild(li);
       });
     }
   </script>
-
 </body>
 </html>
+
